No GENERAL override, but append. Using the VERSION file for 'make dist'.

--- a/gemma/configtool/Makefile
+++ b/gemma/configtool/Makefile
@@ -20,7 +20,7 @@ all-here: $(TARGET)
 
 # default overwrites
 INCLUDES += -I../include/
-GENERAL = 
+GENERAL += 
 
 # default definitions
 OBJS =  $(SOBJS:.s=.o) $(COBJS:.c=.o)
