--- a/cflib/cflib.spec.in
+++ b/cflib/cflib.spec.in
@@ -13,7 +13,7 @@ Group         : Development/Libraries
 
 Packager      : Frank Naumann <fnaumann@freemint.de>
 Vendor        : Sparemint
-URL           : http://wh58-508.st.uni-magdeburg.de/sparemint/
+URL           : http://sparemint.atariforge.net/
 
 Prefix        : %{_prefix}
 Docdir        : %{_prefix}/doc
@@ -70,14 +70,19 @@ make
 %install
 [ "${RPM_BUILD_ROOT}" != "/" ] && rm -rf ${RPM_BUILD_ROOT}
 
+cd cflib
+mkdir -p ${RPM_BUILD_ROOT}%{_prefix}/include
+mkdir -p ${RPM_BUILD_ROOT}%{_prefix}/lib
+install -m 644 libcflib.a ${RPM_BUILD_ROOT}%{_prefix}/lib
+install -m 644 libcflib16.a ${RPM_BUILD_ROOT}%{_prefix}/lib
+install -m 644 cflib.h ${RPM_BUILD_ROOT}%{_prefix}/include
+
 mkdir -p ${RPM_BUILD_ROOT}%{_prefix}/GEM/include
 mkdir -p ${RPM_BUILD_ROOT}%{_prefix}/GEM/lib
 mkdir -p ${RPM_BUILD_ROOT}%{_prefix}/GEM/stguide
-
-cd cflib
-install -m 644 libcflib.a    ${RPM_BUILD_ROOT}%{_prefix}/GEM/lib
-install -m 644 libcflib16.a  ${RPM_BUILD_ROOT}%{_prefix}/GEM/lib
-install -m 644 cflib.h       ${RPM_BUILD_ROOT}%{_prefix}/GEM/include
+ln -s %{_prefix}/lib/libcflib.a ${RPM_BUILD_ROOT}%{_prefix}/GEM/lib/
+ln -s %{_prefix}/lib/libcflib16.a ${RPM_BUILD_ROOT}%{_prefix}/GEM/lib/
+ln -s %{_prefix}/include/cflib.h ${RPM_BUILD_ROOT}%{_prefix}/GEM/include/
 install -m 644 cflib.hyp     ${RPM_BUILD_ROOT}%{_prefix}/GEM/stguide
 install -m 644 cflib.ref     ${RPM_BUILD_ROOT}%{_prefix}/GEM/stguide
 
@@ -125,6 +130,9 @@ fi
 %defattr(-,root,root)
 %doc cflib/COPYING.LIB cflib/LiesMich
 %doc cflib/demo cflib/intrface
+%doc cflib/ChangeLog*
+%{_prefix}/lib/lib*.a
+%{_prefix}/include/*.h
 %{_prefix}/GEM/lib/lib*.a
 %{_prefix}/GEM/include/*.h
 %{_prefix}/GEM/stguide/cflib.hyp
@@ -132,6 +140,9 @@ fi
 
 
 %changelog
+* Sun Jul 18 2004 Frank Naumann <fnaumann@freemint.de>
+- updated to version 0.21.0, using the new gemlib 0.43.2
+
 * Tue Jan  6 2004 Standa Opichal <opichals@seznam.cz>
 - updated to version 0.20.1, using the new gemlib 0.43.1
 
